--- a/OpenSky.Client/Pages/WorldStatistics.xaml
+++ b/OpenSky.Client/Pages/WorldStatistics.xaml
@@ -1,4 +1,4 @@
-﻿<controls:OpenSkyPage x:Class="OpenSky.Client.Pages.WorldPopulation"
+﻿<controls:OpenSkyPage x:Class="OpenSky.Client.Pages.WorldStatistics"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,10 +9,10 @@
              xmlns:ui="http://schemas.modernwpf.com/2019"
              xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
              xmlns:tools="clr-namespace:OpenSky.Client.Tools"
-             mc:Ignorable="d" Loaded="WorldPopulationOnLoaded"
+             mc:Ignorable="d" Loaded="WorldStatisticsOnLoaded"
              d:DesignHeight="1500" d:DesignWidth="1500" HorizontalScrollBar="True" LoadingText="{Binding LoadingText}">
     <UserControl.DataContext>
-        <models:WorldPopulationViewModel />
+        <models:WorldStatisticsViewModel />
     </UserControl.DataContext>
     <UserControl.Resources>
         <CollectionViewSource x:Key="FailedAirportsViewSource" Source="{Binding FailedAirports}">
@@ -37,13 +37,13 @@
         </Grid.ColumnDefinitions>
         <ui:CommandBar Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalContentAlignment="Left">
             <ui:AppBarButton Icon="Refresh" Label="Refresh" ToolTip="Refresh the view [F5]" Command="{Binding RefreshViewCommand}" />
-            <ui:AppBarButton Label="Populate selected failed" ToolTip="Populate the currently selected failed airport" Command="{Binding PopulateSelectedFailedCommand}">
+            <ui:AppBarButton Label="{Binding PopulateAirportCommandText}" ToolTip="Populate airports with aircraft" Command="{Binding TogglePopulateAirportCommand}">
                 <ui:AppBarButton.Icon>
                     <ui:FontIcon Glyph="&#xE709;" />
                 </ui:AppBarButton.Icon>
             </ui:AppBarButton>
         </ui:CommandBar>
-        <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Grid.IsSharedSizeScope="True" Margin="5,0,20,0">
+        <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Grid.IsSharedSizeScope="True" Margin="5,0,0,0">
             <GroupBox Height="300" Margin="5">
                 <GroupBox.Header>
                     <TextBlock>Airports</TextBlock>
@@ -257,8 +257,8 @@
                 </Grid>
             </GroupBox>
         </StackPanel>
-        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Grid.IsSharedSizeScope="True" Margin="5,0,20,0">
-            <GroupBox Height="300" Margin="5">
+        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Grid.IsSharedSizeScope="True" Margin="5,0,5,0">
+            <GroupBox Height="607.5" Margin="5">
                 <GroupBox.Header>
                     <TextBlock>Jobs</TextBlock>
                 </GroupBox.Header>
@@ -272,9 +272,13 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalJobs}" />
-                    <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Total Jobs</TextBlock>
-                    <syncfusion:SfChart Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <StackPanel Orientation="Vertical" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" VerticalAlignment="Center">
+                        <TextBlock FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.JobsGenerated}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Generated Jobs</TextBlock>
+                        <TextBlock FontSize="60" Margin="30,30,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalJobs}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Completed Jobs</TextBlock>
+                    </StackPanel>
+                    <syncfusion:SfChart Grid.Row="0" Grid.Column="1" Height="220" Padding="0" Width="320">
                         <syncfusion:SfChart.Series>
                             <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.JobTypes}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" StartAngle="-45" EndAngle="315" GroupMode="Angle" GroupTo="5" SegmentSpacing="0.03" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
                                 <syncfusion:DoughnutSeries.AdornmentsInfo>
@@ -294,9 +298,9 @@
                             </syncfusion:DoughnutSeries>
                         </syncfusion:SfChart.Series>
                     </syncfusion:SfChart>
-                    <syncfusion:SfChart Margin="30,0,0,0" Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <syncfusion:SfChart Margin="30,0,0,0" Grid.Row="0" Grid.Column="2" Height="220" Padding="0" Width="320">
                         <syncfusion:SfChart.Series>
-                            <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.JobCategories}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" GroupMode="Angle" GroupTo="0" SegmentSpacing="0.05" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
+                            <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.JobAircraftCategories}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" GroupMode="Angle" GroupTo="0" SegmentSpacing="0.05" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
                                 <syncfusion:DoughnutSeries.AdornmentsInfo>
                                     <syncfusion:ChartAdornmentInfo 
                                     ShowLabel="True"
@@ -314,9 +318,29 @@
                             </syncfusion:DoughnutSeries>
                         </syncfusion:SfChart.Series>
                     </syncfusion:SfChart>
+                    <syncfusion:SfChart Grid.Row="1" Grid.Column="1" Height="220" Padding="0" Width="320">
+                        <syncfusion:SfChart.Series>
+                            <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.JobOperators}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" StartAngle="-45" EndAngle="315" GroupMode="Angle" GroupTo="5" SegmentSpacing="0.03" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
+                                <syncfusion:DoughnutSeries.AdornmentsInfo>
+                                    <syncfusion:ChartAdornmentInfo 
+                                        ShowLabel="True"
+                                        ShowConnectorLine="True"
+                                        ConnectorHeight="15"
+                                        UseSeriesPalette="True"
+                                        LabelTemplate="{StaticResource PieChartValueLabelTemplate}"
+                                        SegmentLabelContent="LabelContentPath" />
+                                </syncfusion:DoughnutSeries.AdornmentsInfo>
+                                <syncfusion:DoughnutSeries.CenterView>
+                                    <ContentControl HorizontalAlignment="Center" VerticalAlignment="Center">
+                                        <TextBlock FontSize="25">Operator</TextBlock>
+                                    </ContentControl>
+                                </syncfusion:DoughnutSeries.CenterView>
+                            </syncfusion:DoughnutSeries>
+                        </syncfusion:SfChart.Series>
+                    </syncfusion:SfChart>
                 </Grid>
             </GroupBox>
-            <GroupBox Height="300" Margin="5">
+            <GroupBox Height="300" Margin="5,2.5,5,5">
                 <GroupBox.Header>
                     <TextBlock>Flights</TextBlock>
                 </GroupBox.Header>
@@ -375,10 +399,13 @@
                 </Grid>
             </GroupBox>
         </StackPanel>
-        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Visibility="Collapsed" tools:VisibilityAnimation.AnimationType="SlideFromRight">
+        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Visibility="{Binding PopulateAirportVisibility}" tools:VisibilityAnimation.AnimationType="SlideFromRight" Background="{StaticResource OpenSkyGroupboxBackgroundBrush}">
             <GroupBox Height="455">
                 <GroupBox.Header>
-                    <TextBlock>World populator: Failed airports [Max 50]</TextBlock>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock VerticalAlignment="Center">World populator: Failed airports [Max 50]</TextBlock>
+                        <Button Margin="10,0,0,0" FontSize="9" Style="{StaticResource OpenSkyButtonStyle}" Command="{Binding PopulateSelectedFailedCommand}">Populate selected failed</Button>
+                    </StackPanel>
                 </GroupBox.Header>
                 <DataGrid 
                         x:Name="FailedGrid" Margin="5"
@@ -429,9 +456,9 @@
                     <DockPanel LastChildFill="True" DockPanel.Dock="Top" Margin="0,0,0,10">
                         <TextBlock DockPanel.Dock="Left" VerticalAlignment="Center">Populate the airport with the following ICAO code:</TextBlock>
                         <Button DockPanel.Dock="Right" Style="{StaticResource OpenSkyButtonStyle}" Command="{Binding PopulateAirportCommand}">Populate</Button>
-                        <TextBox Margin="10,0" Text="{Binding PopulateICAO, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ui:ControlHelper.PlaceholderText="ICAO code" ui:ControlHelper.PlaceholderForeground="#666" CharacterCasing="Upper" />
+                        <TextBox Margin="10,0" FontFamily="Consolas" Text="{Binding PopulateICAO, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ui:ControlHelper.PlaceholderText="ICAO code" ui:ControlHelper.PlaceholderForeground="#666" CharacterCasing="Upper" />
                     </DockPanel>
-                    <TextBox Text="{Binding PopulateResult, Mode=OneWay}" IsReadOnly="True" FontFamily="Consolas" />
+                    <TextBox Text="{Binding PopulateAirportResult, Mode=OneWay}" IsReadOnly="True" FontFamily="Consolas" />
                 </DockPanel>
             </GroupBox>
         </StackPanel>
